  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11686: Better spilling heuristic for the Linear Scan allocator for more
  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,
  Alain Frisch and Nathanaëlle Courant)

- #11904: Remove arm, i386 native-code backends.
  (Nicolás Ojeda Bär, review by Stephen Dolan, Anil Madhavapeddy, and Xavier
  Leroy)

### Standard library:

* #11565: Enable -strict-formats by default. Some incorrect format
  specifications (for `printf`) where silently ignored and now fail.
  Those new failures occur at compile-time, except if you use advanced
  format features like `%(...%)` that parse format strings dynamically.
  Pass -no-strict-formats to revert to the previous lenient behavior.
  (Nicolás Ojeda Bär, review by David Allsopp)

- #11883, #11884: Update documentation for In_channel and Out_channel
  with examples and sections to group related functions.
  (Kiran Gopinathan, review by Daniel Bünzli and Xavier Leroy)

- #11878, #11965: Prevent seek_in from marking buffer data as valid after
  closing the channel. This could lead to inputting uninitialized bytes.
  (Samuel Hym, review by Xavier Leroy and Olivier Nicole)

- #11848: Add `List.find_mapi`, `List.find_index`, `Seq.find_mapi`,
  `Seq.find_index`, `Array.find_mapi`, `Array.find_index`,
  `Float.Array.find_opt`, `Float.Array.find_index`, `Float.Array.find_map`,
  `Float.Array.find_mapi`.
  (Sima Kinsart, review by Daniel Bünzli and Nicolás Ojeda Bär)

- #11859: Make Stdlib.(@) and List.append tail-recursive and faster.